parser_M8/parser.output
State 17 conflicts: 1 reduce/reduce
State 334 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 primary_expression: T_IDENTIFIER
    2                   | T_CONSTANT
    3                   | T_STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' T_IDENTIFIER
   10                   | postfix_expression T_PTR_OP T_IDENTIFIER
   11                   | postfix_expression T_INC_OP
   12                   | postfix_expression T_DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | T_INC_OP unary_expression
   17                 | T_DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | T_SIZEOF unary_expression
   20                 | T_SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | T_ADD
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression T_ADD multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression T_LEFT_OP additive_expression
   38                 | shift_expression T_RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression T_LE_OP shift_expression
   43                      | relational_expression T_GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression T_EQ_OP relational_expression
   46                    | equality_expression T_NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression T_AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression T_OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | T_MUL_ASSIGN
   63                    | T_DIV_ASSIGN
   64                    | T_MOD_ASSIGN
   65                    | T_ADD_ASSIGN
   66                    | T_SUB_ASSIGN
   67                    | T_LEFT_ASSIGN
   68                    | T_RIGHT_ASSIGN
   69                    | T_AND_ASSIGN
   70                    | T_XOR_ASSIGN
   71                    | T_OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator

   85 init_declarator: declarator
   86                | declarator '=' initializer

   87 storage_class_specifier: T_TYPEDEF
   88                        | T_EXTERN
   89                        | T_STATIC
   90                        | T_AUTO
   91                        | T_REGISTER

   92 type_specifier: T_VOID
   93               | T_CHAR
   94               | T_SHORT
   95               | T_INT
   96               | T_LONG
   97               | T_FLOAT
   98               | T_DOUBLE
   99               | T_SIGNED
  100               | T_UNSIGNED
  101               | struct_or_union_specifier
  102               | enum_specifier
  103               | T_TYPE_NAME

  104 struct_or_union_specifier: struct_or_union T_IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union '{' struct_declaration_list '}'
  106                          | struct_or_union T_IDENTIFIER

  107 struct_or_union: T_STRUCT
  108                | T_VOLATILE

  109 struct_declaration_list: struct_declaration
  110                        | struct_declaration_list struct_declaration

  111 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 struct_declarator_list: struct_declarator
  117                       | struct_declarator_list ',' struct_declarator

  118 struct_declarator: declarator
  119                  | ':' constant_expression
  120                  | declarator ':' constant_expression

  121 enum_specifier: T_ENUM '{' enumerator_list '}'
  122               | T_ENUM T_IDENTIFIER '{' enumerator_list '}'
  123               | T_ENUM T_IDENTIFIER

  124 enumerator_list: enumerator
  125                | enumerator_list ',' enumerator

  126 enumerator: T_IDENTIFIER
  127           | T_IDENTIFIER '=' constant_expression

  128 type_qualifier: T_CONST
  129               | T_VOLATILE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: T_IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' constant_expression ']'
  135                  | direct_declarator '[' ']'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '(' identifier_list ')'
  138                  | direct_declarator '(' ')'

  139 pointer: '*'
  140        | '*' type_qualifier_list
  141        | '*' pointer
  142        | '*' type_qualifier_list pointer

  143 type_qualifier_list: type_qualifier
  144                    | type_qualifier_list type_qualifier

  145 parameter_type_list: parameter_list
  146                    | parameter_list ',' T_ELLIPSIS

  147 parameter_list: parameter_declaration
  148               | parameter_list ',' parameter_declaration

  149 parameter_declaration: declaration_specifiers declarator
  150                      | declaration_specifiers abstract_declarator
  151                      | declaration_specifiers

  152 identifier_list: T_IDENTIFIER
  153                | identifier_list ',' T_IDENTIFIER

  154 type_name: specifier_qualifier_list
  155          | specifier_qualifier_list abstract_declarator

  156 abstract_declarator: pointer
  157                    | direct_abstract_declarator
  158                    | pointer direct_abstract_declarator

  159 direct_abstract_declarator: '(' abstract_declarator ')'
  160                           | '[' ']'
  161                           | '[' constant_expression ']'
  162                           | direct_abstract_declarator '[' ']'
  163                           | direct_abstract_declarator '[' constant_expression ']'
  164                           | '(' ')'
  165                           | '(' parameter_type_list ')'
  166                           | direct_abstract_declarator '(' ')'
  167                           | direct_abstract_declarator '(' parameter_type_list ')'

  168 initializer: assignment_expression
  169            | '{' initializer_list '}'
  170            | '{' initializer_list ',' '}'

  171 initializer_list: initializer
  172                 | initializer_list ',' initializer

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: T_IDENTIFIER ':' statement
  180                  | T_CASE constant_expression ':' statement
  181                  | T_DEFAULT ':' statement

  182 compound_statement: '{' '}'
  183                   | '{' statement_list '}'
  184                   | '{' declaration_list '}'
  185                   | '{' declaration_list statement_list '}'

  186 declaration_list: declaration
  187                 | declaration_list declaration

  188 statement_list: statement
  189               | statement_list statement

  190 expression_statement: ';'
  191                     | expression ';'

  192 selection_statement: T_IF '(' expression ')' statement
  193                    | T_IF '(' expression ')' statement T_ELSE statement
  194                    | T_SWITCH '(' expression ')' statement

  195 iteration_statement: T_WHILE '(' expression ')' statement
  196                    | T_DO statement T_WHILE '(' expression ')' ';'
  197                    | T_FOR '(' expression_statement expression_statement ')' statement
  198                    | T_FOR '(' expression_statement expression_statement expression ')' statement

  199 jump_statement: T_GOTO T_IDENTIFIER ';'
  200               | T_CONTINUE ';'
  201               | T_BREAK ';'
  202               | T_RETURN ';'
  203               | T_RETURN expression ';'

  204 start: translation_unit

  205 translation_unit: external_declaration
  206                 | translation_unit external_declaration

  207 external_declaration: function_definition
  208                     | declaration

  209 function_definition: declaration_specifiers declarator declaration_list compound_statement
  210                    | declaration_specifiers declarator compound_statement
  211                    | declarator declaration_list compound_statement
  212                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    ')' (41) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    '*' (42) 22 30 139 140 141 142
    ',' (44) 14 73 84 117 125 146 148 153 170 172
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 58 119 120 179 180 181
    ';' (59) 75 76 111 190 191 196 199 200 201 202 203
    '<' (60) 40
    '=' (61) 61 86 127
    '>' (62) 41
    '?' (63) 58
    '[' (91) 6 134 135 160 161 162 163
    ']' (93) 6 134 135 160 161 162 163
    '^' (94) 50
    '{' (123) 104 105 121 122 169 170 182 183 184 185
    '|' (124) 52
    '}' (125) 104 105 121 122 169 170 182 183 184 185
    '~' (126) 25
    error (256)
    T_IDENTIFIER <string> (258) 1 9 10 104 106 122 123 126 127 132 152 153 179 199
    T_CONSTANT <string> (259) 2
    T_STRING_LITERAL <string> (260) 3
    T_PTR_OP (261) 10
    T_INC_OP (262) 11 16
    T_DEC_OP (263) 12 17
    T_LEFT_OP (264) 37
    T_RIGHT_OP (265) 38
    T_LE_OP (266) 42
    T_GE_OP (267) 43
    T_EQ_OP (268) 45
    T_NE_OP (269) 46
    T_SIZEOF (270) 19 20
    T_AND_OP (271) 54
    T_OR_OP (272) 56
    T_MUL_ASSIGN (273) 62
    T_DIV_ASSIGN (274) 63
    T_MOD_ASSIGN (275) 64
    T_ADD_ASSIGN (276) 65
    T_SUB_ASSIGN (277) 66
    T_LEFT_ASSIGN (278) 67
    T_RIGHT_ASSIGN (279) 68
    T_AND_ASSIGN (280) 69
    T_ADD (281) 23 34
    T_XOR_ASSIGN (282) 70
    T_OR_ASSIGN (283) 71
    T_TYPE_NAME (284) 103
    T_TYPEDEF (285) 87
    T_EXTERN (286) 88
    T_STATIC (287) 89
    T_AUTO (288) 90
    T_REGISTER (289) 91
    T_CHAR (290) 93
    T_SHORT (291) 94
    T_INT (292) 95
    T_LONG (293) 96
    T_SIGNED (294) 99
    T_UNSIGNED (295) 100
    T_FLOAT (296) 97
    T_DOUBLE (297) 98
    T_CONST (298) 128
    T_VOLATILE (299) 108 129
    T_VOID (300) 92
    T_STRUCT (301) 107
    T_ENUM (302) 121 122 123
    T_ELLIPSIS (303) 146
    T_CASE (304) 180
    T_DEFAULT (305) 181
    T_IF (306) 192 193
    T_ELSE (307) 193
    T_SWITCH (308) 194
    T_WHILE (309) 195 196
    T_DO (310) 196
    T_FOR (311) 197 198
    T_GOTO (312) 199
    T_CONTINUE (313) 200
    T_BREAK (314) 201
    T_RETURN (315) 202 203


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    primary_expression <node> (85)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <node> (86)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <node> (87)
        on left: 13 14
        on right: 8 14
    unary_expression <node> (88)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator <node> (89)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression <node> (90)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression <node> (91)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression <node> (92)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression <node> (93)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression <node> (94)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression <node> (95)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression <node> (96)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression <node> (97)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression <node> (98)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression <node> (99)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression <node> (100)
        on left: 55 56
        on right: 56 57 58
    conditional_expression <node> (101)
        on left: 57 58
        on right: 58 59 74
    assignment_expression <node> (102)
        on left: 59 60
        on right: 13 14 60 72 73 168
    assignment_operator <node> (103)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression <node> (104)
        on left: 72 73
        on right: 4 6 58 73 191 192 193 194 195 196 198 203
    constant_expression <node> (105)
        on left: 74
        on right: 119 120 127 134 161 163 180
    declaration <node> (106)
        on left: 75 76
        on right: 186 187 208
    declaration_specifiers <node> (107)
        on left: 77 78 79 80 81 82
        on right: 75 76 78 80 82 149 150 151 209 210
    init_declarator_list <node> (108)
        on left: 83 84
        on right: 76 84
    init_declarator <node> (109)
        on left: 85 86
        on right: 83 84
    storage_class_specifier <node> (110)
        on left: 87 88 89 90 91
        on right: 77 78
    type_specifier <node> (111)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 79 80 112 113
    struct_or_union_specifier <node> (112)
        on left: 104 105 106
        on right: 101
    struct_or_union <node> (113)
        on left: 107 108
        on right: 104 105 106
    struct_declaration_list <node> (114)
        on left: 109 110
        on right: 104 105 110
    struct_declaration <node> (115)
        on left: 111
        on right: 109 110
    specifier_qualifier_list <node> (116)
        on left: 112 113 114 115
        on right: 111 112 114 154 155
    struct_declarator_list <node> (117)
        on left: 116 117
        on right: 111 117
    struct_declarator <node> (118)
        on left: 118 119 120
        on right: 116 117
    enum_specifier <node> (119)
        on left: 121 122 123
        on right: 102
    enumerator_list <node> (120)
        on left: 124 125
        on right: 121 122 125
    enumerator <node> (121)
        on left: 126 127
        on right: 124 125
    type_qualifier <node> (122)
        on left: 128 129
        on right: 81 82 114 115 143 144
    declarator <node> (123)
        on left: 130 131
        on right: 85 86 118 120 133 149 209 210 211 212
    direct_declarator <node> (124)
        on left: 132 133 134 135 136 137 138
        on right: 130 131 134 135 136 137 138
    pointer <node> (125)
        on left: 139 140 141 142
        on right: 130 141 142 156 158
    type_qualifier_list <node> (126)
        on left: 143 144
        on right: 140 142 144
    parameter_type_list <node> (127)
        on left: 145 146
        on right: 136 165 167
    parameter_list <node> (128)
        on left: 147 148
        on right: 145 146 148
    parameter_declaration <node> (129)
        on left: 149 150 151
        on right: 147 148
    identifier_list <node> (130)
        on left: 152 153
        on right: 137 153
    type_name <node> (131)
        on left: 154 155
        on right: 20 28
    abstract_declarator <node> (132)
        on left: 156 157 158
        on right: 150 155 159
    direct_abstract_declarator <node> (133)
        on left: 159 160 161 162 163 164 165 166 167
        on right: 157 158 162 163 166 167
    initializer <node> (134)
        on left: 168 169 170
        on right: 86 171 172
    initializer_list <node> (135)
        on left: 171 172
        on right: 169 170 172
    statement <node> (136)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 188 189 192 193 194 195 196 197 198
    labeled_statement <node> (137)
        on left: 179 180 181
        on right: 173
    compound_statement <node> (138)
        on left: 182 183 184 185
        on right: 174 209 210 211 212
    declaration_list <node> (139)
        on left: 186 187
        on right: 184 185 187 209 211
    statement_list <node> (140)
        on left: 188 189
        on right: 183 185 189
    expression_statement <node> (141)
        on left: 190 191
        on right: 175 197 198
    selection_statement <node> (142)
        on left: 192 193 194
        on right: 176
    iteration_statement <node> (143)
        on left: 195 196 197 198
        on right: 177
    jump_statement <node> (144)
        on left: 199 200 201 202 203
        on right: 178
    start <node> (145)
        on left: 204
        on right: 0
    translation_unit <node> (146)
        on left: 205 206
        on right: 204 206
    external_declaration <node> (147)
        on left: 207 208
        on right: 205 206
    function_definition <node> (148)
        on left: 209 210 211 212
        on right: 207


State 0

    0 $accept: . start $end

    T_IDENTIFIER  shift, and go to state 1
    T_TYPE_NAME   shift, and go to state 2
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_CONST       shift, and go to state 16
    T_VOLATILE    shift, and go to state 17
    T_VOID        shift, and go to state 18
    T_STRUCT      shift, and go to state 19
    T_ENUM        shift, and go to state 20
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    start                      go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  132 direct_declarator: T_IDENTIFIER .

    $default  reduce using rule 132 (direct_declarator)


State 2

  103 type_specifier: T_TYPE_NAME .

    $default  reduce using rule 103 (type_specifier)


State 3

   87 storage_class_specifier: T_TYPEDEF .

    $default  reduce using rule 87 (storage_class_specifier)


State 4

   88 storage_class_specifier: T_EXTERN .

    $default  reduce using rule 88 (storage_class_specifier)


State 5

   89 storage_class_specifier: T_STATIC .

    $default  reduce using rule 89 (storage_class_specifier)


State 6

   90 storage_class_specifier: T_AUTO .

    $default  reduce using rule 90 (storage_class_specifier)


State 7

   91 storage_class_specifier: T_REGISTER .

    $default  reduce using rule 91 (storage_class_specifier)


State 8

   93 type_specifier: T_CHAR .

    $default  reduce using rule 93 (type_specifier)


State 9

   94 type_specifier: T_SHORT .

    $default  reduce using rule 94 (type_specifier)


State 10

   95 type_specifier: T_INT .

    $default  reduce using rule 95 (type_specifier)


State 11

   96 type_specifier: T_LONG .

    $default  reduce using rule 96 (type_specifier)


State 12

   99 type_specifier: T_SIGNED .

    $default  reduce using rule 99 (type_specifier)


State 13

  100 type_specifier: T_UNSIGNED .

    $default  reduce using rule 100 (type_specifier)


State 14

   97 type_specifier: T_FLOAT .

    $default  reduce using rule 97 (type_specifier)


State 15

   98 type_specifier: T_DOUBLE .

    $default  reduce using rule 98 (type_specifier)


State 16

  128 type_qualifier: T_CONST .

    $default  reduce using rule 128 (type_qualifier)


State 17

  108 struct_or_union: T_VOLATILE .
  129 type_qualifier: T_VOLATILE .

    T_IDENTIFIER  reduce using rule 108 (struct_or_union)
    T_IDENTIFIER  [reduce using rule 129 (type_qualifier)]
    '{'           reduce using rule 108 (struct_or_union)
    $default      reduce using rule 129 (type_qualifier)


State 18

   92 type_specifier: T_VOID .

    $default  reduce using rule 92 (type_specifier)


State 19

  107 struct_or_union: T_STRUCT .

    $default  reduce using rule 107 (struct_or_union)


State 20

  121 enum_specifier: T_ENUM . '{' enumerator_list '}'
  122               | T_ENUM . T_IDENTIFIER '{' enumerator_list '}'
  123               | T_ENUM . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 38
    '{'           shift, and go to state 39


State 21

  133 direct_declarator: '(' . declarator ')'

    T_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    declarator         go to state 40
    direct_declarator  go to state 32
    pointer            go to state 33


State 22

  139 pointer: '*' .
  140        | '*' . type_qualifier_list
  141        | '*' . pointer
  142        | '*' . type_qualifier_list pointer

    T_CONST     shift, and go to state 16
    T_VOLATILE  shift, and go to state 41
    '*'         shift, and go to state 22

    $default  reduce using rule 139 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


State 23

  208 external_declaration: declaration .

    $default  reduce using rule 208 (external_declaration)


State 24

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  209 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  210                    | declaration_specifiers . declarator compound_statement

    T_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21
    '*'           shift, and go to state 22
    ';'           shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 32
    pointer               go to state 33


State 25

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 26

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers
